--- a/src/app/componenti/dashboard/dashboard.component.html
+++ b/src/app/componenti/dashboard/dashboard.component.html
@@ -2,16 +2,16 @@
     <mat-sidenav mode="side" opened>
         <mat-list role="list">
             <!-- routerLinkActive="active" è per dire se siamo effettivament alla pagina x -->
-            <mat-list-item role="listitem" routerLink="pagina1" [routerLinkActive]="'active'">Pagina 1</mat-list-item>
-            <mat-list-item role="listitem" routerLink="pagina2" [routerLinkActive]="'active'">Pagina 2</mat-list-item>
-            <mat-list-item role="listitem" routerLink="pagina3" [routerLinkActive]="'active'">Pagina 3</mat-list-item>
+            <mat-list-item role="listitem" routerLink="pagina1" [routerLinkActive]="'active'">lista elementi</mat-list-item>
+            <mat-list-item role="listitem" routerLink="pagina2" [routerLinkActive]="'active'">inserisci elementi</mat-list-item>
+            <mat-list-item role="listitem" routerLink="pagina3" [routerLinkActive]="'active'">cancella elementi</mat-list-item>
         </mat-list>
     </mat-sidenav>
     <mat-sidenav-content>
         <mat-toolbar color="primary">
             <span class="example-spacer"></span>
             <!-- collegare con il logout local storage etc -->
-            <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon"> 
+            <button (click)="onLogout()" class="example-icon" aria-label="Example icon-button with share icon"> 
                 <mat-icon>logout</mat-icon>
             </button>
         </mat-toolbar>
