--- a/src/app/componenti/login/login.component.html
+++ b/src/app/componenti/login/login.component.html
@@ -1,11 +1,11 @@
 <h1>Login</h1>
 <form #loginform="ngForm" (ngSubmit)="onSubmit(loginform)">
     <mat-form-field appearance="fill">
-        <mat-label>Input</mat-label>
+        <mat-label>email</mat-label>
         <input matInput type="email" name="email" required ngModel>
     </mat-form-field>
     <mat-form-field appearance="fill">
-        <mat-label>Input</mat-label>
+        <mat-label>password</mat-label>
         <input matInput type="password" name="password" required ngModel>
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit" [disabled]="!loginform.valid">Invia</button>
