--- a/src/app/componenti/pagina2/pagina2.component.html
+++ b/src/app/componenti/pagina2/pagina2.component.html
@@ -1,1 +1,19 @@
-<p>pagina2 works!</p>
+<form [formGroup]="pagina2form" (ngSubmit)="onSubmit()">
+    <mat-form-field appearance="fill">
+        <mat-label>Nome</mat-label>
+        <input matInput type="nome" formControlName="nome">
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+        <mat-label>Email</mat-label>
+        <input matInput type="email" formControlName="email">
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+        <mat-label>Colore</mat-label>
+        <mat-select name="colore" formControlName="colore">
+            <mat-option value="rosso">Rosso</mat-option>
+            <mat-option value="blu">Blu</mat-option>
+        </mat-select>
+    </mat-form-field>
+    <button mat-raised-button color="primary" type="submit">Invia</button>
+
+</form>
