--- a/src/app/componenti/register/register.component.html
+++ b/src/app/componenti/register/register.component.html
@@ -1,11 +1,11 @@
 <h1>Register</h1>
 <form #registerform="ngForm" (ngSubmit)="onSubmit(registerform)">
     <mat-form-field appearance="fill">
-        <mat-label>Input</mat-label>
+        <mat-label>email</mat-label>
         <input matInput type="email" name="email" required ngModel>
     </mat-form-field>
     <mat-form-field appearance="fill">
-        <mat-label>Input</mat-label>
+        <mat-label>password</mat-label>
         <input matInput type="password" name="password" required ngModel>
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit" [disabled]="!registerform.valid">Invia</button>
