--- a/src/app/componenti/register/register.component.css
+++ b/src/app/componenti/register/register.component.css
@@ -3,4 +3,13 @@
     flex-direction: column;
     align-items: flex-start;
   }
-  
+
+mat-form-field {
+    margin-left: 1rem;
+  }
+
+button {
+    margin-left: 1rem;
+}
+
+h1 { color: #7b1fa2; font-family: 'Raleway',sans-serif; font-size: 2rem; font-weight: 800; line-height: 2.1rem; margin: 1rem 1rem 1rem; text-align: center; text-transform: uppercase; }
