--- a/src/app/componenti/login/login.component.css
+++ b/src/app/componenti/login/login.component.css
@@ -1,15 +1,33 @@
 :host {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-mat-form-field {
-    margin-left: 1rem;
-  }
-
-button {
-    margin-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
-h1 { color: #7b1fa2; font-family: 'Raleway',sans-serif; font-size: 2rem; font-weight: 800; line-height: 2.1rem; margin: 1rem 1rem 1rem; text-align: center; text-transform: uppercase; }
+mat-form-field {
+  margin-left: 1rem;
+}
+
+button {
+  margin-left: 1rem;
+}
+
+h1 {
+  color: #7b1fa2;
+  font-family: 'Raleway',
+    sans-serif;
+  font-size: 2rem;
+  font-weight: 800;
+  line-height: 2.1rem;
+  margin: 1rem 1rem 1rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+}
