--- a/src/app/componenti/register/register.component.css
+++ b/src/app/componenti/register/register.component.css
@@ -12,4 +12,18 @@ button {
     margin-left: 1rem;
 }
 
-h1 { color: #7b1fa2; font-family: 'Raleway',sans-serif; font-size: 2rem; font-weight: 800; line-height: 2.1rem; margin: 1rem 1rem 1rem; text-align: center; text-transform: uppercase; }
+h1 {
+  color: #7b1fa2;
+  font-family: 'Raleway',
+    sans-serif;
+  font-size: 2rem;
+  font-weight: 800;
+  line-height: 2.1rem;
+  margin: 1rem 1rem 1rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.material-symbols-outlined {
+    object-position: right top; 
+}
