--- a/src/app/componenti/pagina2/pagina2.component.html
+++ b/src/app/componenti/pagina2/pagina2.component.html
@@ -15,5 +15,5 @@
         <mat-label>Symbol</mat-label>
         <input matInput type="symbol" formControlName="symbol">
     </mat-form-field>
-    <button mat-raised-button color="primary" type="submit">Invia</button>
+    <button mat-raised-button color="primary" type="submit">Aggiungi</button>
 </form>
