--- a/src/app/componenti/pagina1/pagina1.component.html
+++ b/src/app/componenti/pagina1/pagina1.component.html
@@ -28,8 +28,14 @@
             <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
         </ng-container>
 
+        <!-- Delete Column -->
+        <ng-container matColumnDef="delete">
+            <th mat-header-cell *matHeaderCellDef> Delete </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-raised-button color="primary" (click)="onDeleteElemento(element)">Elimina elemento</button>
+            </td>
+        </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-
 </section>
