--- a/src/app/componenti/register/register.component.html
+++ b/src/app/componenti/register/register.component.html
@@ -15,5 +15,5 @@
         <mat-label>password</mat-label>
         <input matInput type="password" name="password" required ngModel>
     </mat-form-field>
-    <button mat-raised-button color="primary" type="submit" [disabled]="!registerform.valid">Invia</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="!registerform.valid">Registrati</button>
 </form>
