--- a/src/app/componenti/login/login.component.css
+++ b/src/app/componenti/login/login.component.css
@@ -10,17 +10,27 @@ mat-form-field {
 
 button {
   margin-left: 1rem;
+  display: inline-flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0.2rem 0.8rem;
 }
 
+
 h1 {
+  box-sizing: border-box;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 1rem;
   color: #7b1fa2;
   font-family: 'Raleway',
     sans-serif;
   font-size: 2rem;
   font-weight: 800;
-  line-height: 2.1rem;
-  margin: 1rem 1rem 1rem;
-  text-align: center;
+  line-height: normal;
   text-transform: uppercase;
 }
 
