--- a/src/app/componenti/register/register.component.css
+++ b/src/app/componenti/register/register.component.css
@@ -1,29 +1,43 @@
 :host {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-mat-form-field {
-    margin-left: 1rem;
-  }
-
-button {
-    margin-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
+mat-form-field {
+  margin-left: 1rem;
+}
+
+button {
+  margin-left: 1rem;
+  display: inline-flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0.2rem 0.8rem;
+}
+
+
 h1 {
+  box-sizing: border-box;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 1rem;
   color: #7b1fa2;
   font-family: 'Raleway',
     sans-serif;
   font-size: 2rem;
   font-weight: 800;
-  line-height: 2.1rem;
-  margin: 1rem 1rem 1rem;
-  text-align: center;
+  line-height: normal;
   text-transform: uppercase;
 }
 
 .material-symbols-outlined {
-    object-position: right top; 
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
 }
